--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lodash": "3.10.1",
     "machinepack-urls": "^3.1.1",
     "semver": "^4.3.4",
-    "socket.io": "~1.4.3",
+    "socket.io": "https://github.com/ryd0rz/socket.io.git#1.7.x",
     "socket.io-client": "~1.4.3",
     "uid2": "0.0.3"
   },
