--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "machinepack-fs": "^3.0.0",
     "machinepack-http": "^2.1.2",
     "mocha": "^2.2.4",
-    "sails": "balderdashy/sails",
+    "sails": "ryd0rz/sails",
     "sails.io.js": "^0.13.0",
     "socket.io-redis": "^1.0.0"
   },
